GNOME Bugzilla – Bug 746173
new glimagesink (as glimagesinkbin) cannot copy metadata
Last modified: 2015-03-14 19:54:49 UTC
Using today's master of gst-plugins-bad, where glimagesink is now an instance of gstimagesinkbin, and using master of gstreamer-vaapi when playing a video, this critical message is shown per frame: gst-play-1.0:15074): GStreamer-CRITICAL **: gst_buffer_copy_into: assertion 'gst_buffer_is_writable (dest)' failed A bisect shows that the error appeared with commit 8a0017e21d5f9a8507f0593c6b24f723aa415258 The message appear on gstgluploadelement.c:240
Created attachment 299413 [details] [review] glupload: move meta-data copy into gst-gl library In some upload implementations the out buffer has more than one references, turning the buffer not writable, so it won't be possible to modify its meta-data. This patch moves the meta-data copy before increasing the reference of the out buffer.
commit d925e7fd1946697edaa193ba446dcc276afb1b58 Author: Víctor Manuel Jáquez Leal <vjaquez@igalia.com> Date: Sat Mar 14 19:48:21 2015 +0100 glupload: move meta-data copy into gst-gl library In some upload implementations the out buffer has more than one references, turning the buffer not writable, so it won't be possible to modify its meta-data. This patch moves the meta-data copy before increasing the reference of the out buffer. https://bugzilla.gnome.org/show_bug.cgi?id=746173